--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "express-session": "^1.17.2",
     "joi": "^17.5.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
