--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jycurien/YelpCamp#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.2",
@@ -26,6 +27,7 @@
     "joi": "^17.5.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
