--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "sanitize-html": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
